# mux

./: .gitignore  Cargo.toml  DESIGN.md  README.md  progress.md  run-all.sh
assignment/: README.md  mock_backend.py  test_client.py
docs/superpowers/plans/: 2026-05-02-connection-pool-and-passive-close.md  2026-05-09-perf-harness.md
docs/superpowers/results/: 2026-05-02-chaos-fix-verification.md  2026-05-12-backpressure-verification.md
docs/superpowers/specs/: 2026-05-02-connection-pool-and-passive-close-design.md  2026-05-04-allocation-pass-design.md  2026-05-04-backend-lifecycle-task-design.md  2026-05-04-circuit-breaker-design.md  2026-05-04-drain-detach-design.md  2026-05-04-hang-timeout-default-design.md  2026-05-04-per-stream-backpressure-design.md  2026-05-04-scoring-decoupling-design.md  2026-05-06-perf-harness-design.md
perf/: README.md  metrics_diff.py  plot_latency.py  profile.sh  stress.py  test_perf.py
src/: config.rs  error.rs  forward.rs  health.rs  main.rs  metrics.rs  server.rs  types.rs
src/backend/: circuit.rs  connection.rs  mod.rs  scoring.rs  shard.rs  state.rs
src/client/: buffer.rs  mod.rs  router.rs  stream.rs  streams.rs
src/dispatch/: connect.rs  lifecycle.rs  mod.rs  queue.rs
src/protocol/: backend.rs  client.rs  frame.rs  mod.rs
